...
        super.viewDidLoad()
        configureUI()
    }
    
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        configureNavigationBar(withTitle: "Collections", prefersLargeTitles: true)
        navigationController?.navigationBar.barStyle = .black
    }
    
    // MARK: – Helpers
    
    private func configureUI() {
...
