...
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="KFi-oT-KJo">
                                <rect key="frame" x="42.333333333333343" y="167" width="308.33333333333326" height="100"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reverse Words" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Xu-rB-0gv">
                                        <rect key="frame" x="39.666666666666671" y="0.0" width="229.33333333333331" height="40"/>
                                        <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="34"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This application will reverse your words. Please type text below " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskInt
...
                            <constraint firstItem="0Tg-Lh-gBA" firstAttribute="centerX" secondItem="o1m-PO-xtb" secondAttribute="centerX" id="nQF-Sx-gPw"/>
                            <constraint firstItem="o1m-PO-xtb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="9" id="qVd-IH-xrq"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="0Tg-Lh-gBA" secondAttribute="bottom" constant="1.1368683772161603e-13" id="uTB-l9-h9W"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Reverse Words" id="HO9-Ay-KnE">
                        <barButtonItem key="rightBarButtonItem" title="Anagram" id="7NP-rB-A0W">
                            <connections>
                                <segue destination="dbF-Yi-0xC" kind="show" id="GdG-XJ-bL8"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                            <constraint firstItem="EqG-Qk-vSh" firstAttribute="leading" secondItem="rKM-qY-38I" secondAttribute="leading" id="eAJ-Bx-RUK"/>
                            <constraint firstItem="rKM-qY-38I" firstAttribute="trailing" secondItem="EqG-Qk-vSh" secondAttribute="trailing" id="lhL-In-f4b"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="hBr-Tx-kJu"/>
                    <connections>
                        <outlet property="changeLogic" destination="Mco-4Y-3xb" id="wWn-93-Yng"/>
                        <outlet property="ignoredTextField" destination="AoD-gE-yta" id="K9N-pR-769"/>
                        <outlet property="infoLabel" destination="YFN-wT-3AO" id="z9P-dh-PNI"/>
                        <outlet property="resultLabel" destination="yUq-5n-Iwu" id="Yuo-jj-EuD"/>
                        <outlet property="toReverseTextField" destination="Dke-hA-vQI" id="udx-v8-kJb"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="8w2-tC-sSP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1940" y="4"/>
        </scene>
...
