...
        didSet {
            infoLabel.accessibilityIdentifier = "infoLabel"
        }
    }
    @IBOutlet weak var ignoredTextField: UITextField! {
        didSet {
            ignoredTextField.accessibilityIdentifier = "toIgnoreTextField"
        }
    }
    @IBOutlet weak var resultLabel: UILabel! {
        didSet {
            resultLabel.accessibilityIdentifier = "resultLabel"
        }
...
