...
        musicButton.tintColor = .green
        musicButton.addTarget(self, action: #selector(musicButtonPressed(_:)), for: .touchUpInside)
        settingsViewController.view.addSubview(musicButton)
        
        alert.setValue(settingsViewController, forKey: "contentViewController")
        
        alert.addAction(UIAlertAction(title: "Done", style: .default, handler: { (_) in
            // Handle Done button action if needed
        }))
        
        self.present(alert, animated: true, completion: nil)
    }
    
...
