...
                            }

                            ActionButton(title: "Success", icon: "checkmark.seal.fill", colors: [Color.teal, Color.green]) {
                                showSuccessAlert = true
                            }

                            ActionButton(title: "Warning", icon: "exclamationmark.triangle.fill", colors: [Color.orange, Color.yellow]) {
                                showWarningAlert = true
                            }

                            ActionButton(title: "Custom Input", icon: "square.and.pencil", colors: [Color.purple, Color.indigo]) {
                                showCustomInputDialog = true
                            }
...
